# serial-protocol-stack

./: CMakeLists.txt  README.md  configure.sh
.github/workflows/: ci.yml
src/application/: ApplicationLayer.cpp  ApplicationLayer.h
src/crc/: CrcLayer.cpp  CrcLayer.h
src/framing/: FramingLayer.cpp  FramingLayer.h
src/physical/: IPhysicalLayer.h  SocketPhysicalLayer.cpp  SocketPhysicalLayer.h
src/session/: SessionLayer.cpp  SessionLayer.h
tests/: ApplicationLayerTest.cpp  CrcLayerTest.cpp  FramingLayerTest.cpp  IntegrationTest.cpp  PhysicalLayerTest.cpp  SessionLayerTest.cpp
